--- a/index.html
+++ b/index.html
@@ -13,16 +13,29 @@
 </head>
 
 <body>
-    <!-- <h1 class="title">scss</h1> -->
-    <header class="header center">
-        <div class="header__left">
-            <a href="index.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
-            <svg width="27" height="28" viewBox="0 0 27 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M19.0589 17.6251C20.6705 15.865 21.6275 13.6039 21.769 11.2216C21.9106 8.83932 21.2281 6.48088 19.8362 4.54232C18.4443 2.60377 16.4278 1.20318 14.1252 0.575765C11.8227 -0.0516554 9.37437 0.132305 7.19143 1.09675C5.0085 2.0612 3.22389 3.74739 2.1373 5.87217C1.05071 7.99695 0.728322 10.4309 1.22426 12.7653C1.72021 15.0997 3.00428 17.1923 4.86085 18.6919C6.71741 20.1914 9.0334 21.0064 11.4199 21.0001C13.6723 21.0031 15.8638 20.2691 17.6599 18.9101L25.4079 26.7171C25.4934 26.8061 25.5958 26.8772 25.7091 26.9261C25.8225 26.9751 25.9444 27.0009 26.0679 27.0021C26.1916 27.0024 26.314 26.9773 26.4276 26.9283C26.5411 26.8793 26.6434 26.8074 26.7279 26.7171C26.9018 26.5362 26.999 26.295 26.999 26.0441C26.999 25.7931 26.9018 25.5519 26.7279 25.371L19.0589 17.6251ZM2.88589 10.5001C2.89873 8.81477 3.41021 7.17101 4.35586 5.776C5.30151 4.38098 6.63899 3.29715 8.1997 2.66114C9.76042 2.02513 11.4745 1.86542 13.1258 2.20213C14.7772 2.53884 16.2919 3.3569 17.479 4.55319C18.6661 5.74948 19.4725 7.27044 19.7965 8.92433C20.1204 10.5782 19.9475 12.291 19.2995 13.8468C18.6515 15.4026 17.5574 16.7316 16.1551 17.6665C14.7529 18.6014 13.1052 19.1002 11.4199 19.1C9.14843 19.0892 6.97409 18.1775 5.3741 16.5652C3.77412 14.9528 2.87924 12.7715 2.88589 10.5001Z" fill="#E8E8E8"/>
-            </svg>
+    <div class="box-content">
+        <!-- <h1 class="title">scss</h1> -->
+        <header class="header center">
+            <div class="header__left">
+                <a href="index.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+                <svg width="27" height="28" viewBox="0 0 27 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.0589 17.6251C20.6705 15.865 21.6275 13.6039 21.769 11.2216C21.9106 8.83932 21.2281 6.48088 19.8362 4.54232C18.4443 2.60377 16.4278 1.20318 14.1252 0.575765C11.8227 -0.0516554 9.37437 0.132305 7.19143 1.09675C5.0085 2.0612 3.22389 3.74739 2.1373 5.87217C1.05071 7.99695 0.728322 10.4309 1.22426 12.7653C1.72021 15.0997 3.00428 17.1923 4.86085 18.6919C6.71741 20.1914 9.0334 21.0064 11.4199 21.0001C13.6723 21.0031 15.8638 20.2691 17.6599 18.9101L25.4079 26.7171C25.4934 26.8061 25.5958 26.8772 25.7091 26.9261C25.8225 26.9751 25.9444 27.0009 26.0679 27.0021C26.1916 27.0024 26.314 26.9773 26.4276 26.9283C26.5411 26.8793 26.6434 26.8074 26.7279 26.7171C26.9018 26.5362 26.999 26.295 26.999 26.0441C26.999 25.7931 26.9018 25.5519 26.7279 25.371L19.0589 17.6251ZM2.88589 10.5001C2.89873 8.81477 3.41021 7.17101 4.35586 5.776C5.30151 4.38098 6.63899 3.29715 8.1997 2.66114C9.76042 2.02513 11.4745 1.86542 13.1258 2.20213C14.7772 2.53884 16.2919 3.3569 17.479 4.55319C18.6661 5.74948 19.4725 7.27044 19.7965 8.92433C20.1204 10.5782 19.9475 12.291 19.2995 13.8468C18.6515 15.4026 17.5574 16.7316 16.1551 17.6665C14.7529 18.6014 13.1052 19.1002 11.4199 19.1C9.14843 19.0892 6.97409 18.1775 5.3741 16.5652C3.77412 14.9528 2.87924 12.7715 2.88589 10.5001Z" fill="#E8E8E8"/>
+                </svg>
 
-        </div>
-        <div class="header__right"></div>
+            </div>
+            <div class="header__right">
+                <label for="burger"><img src="img/burger.svg" alt="burger-menu"></label>
+                <input id="burger" type="checkbox">
+                <nav class="nav">
+                    <ul>
+                        <li><a href="">link</a></li>
+                        <li><a href="">link</a></li>
+                        <li><a href="">link</a></li>
+                        <li><a href="">link</a></li>
+                    </ul>
+                </nav>
+            </div>
+    </div>
     </header>
 
     <div class="top-head center">
@@ -33,6 +46,101 @@
             <a href="#" class="breadcrumbs__link breadcrumbs__link_site"> NEW ARRIVALS</a>
         </nav>
     </div>
+    <div class="filter-sort center">
+        <details class="filter">
+            <summary class="filter__summary"><span class="filter__heading">FILTER</span>
+                <svg width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.833333 10H4.16667C4.625 10 5 9.625 5 9.16667C5 8.70833 4.625 8.33333 4.16667 8.33333H0.833333C0.375 8.33333 0 8.70833 0 9.16667C0 9.625 0.375 10 0.833333 10ZM0 0.833333C0 1.29167 0.375 1.66667 0.833333 1.66667H14.1667C14.625 1.66667 15 1.29167 15 0.833333C15 0.375 14.625 0 14.1667 0H0.833333C0.375 0 0 0.375 0 0.833333ZM0.833333 5.83333H9.16667C9.625 5.83333 10 5.45833 10 5C10 4.54167 9.625 4.16667 9.16667 4.16667H0.833333C0.375 4.16667 0 4.54167 0 5C0 5.45833 0.375 5.83333 0.833333 5.83333Z" fill="black"/>
+                        </svg>
+
+            </summary>
+            <div class="filter__content">
+                <details open class="filter__item">
+                    <summary class="filter__head">CATEGORY</summary>
+                    <div class="filter__link-box">
+                        <a href="" class="filter__link">Accessories</a>
+                        <a href="" class="filter__link">Bags</a>
+                        <a href="" class="filter__link">Denim</a>
+                        <a href="" class="filter__link">Hoodies & Sweatshirts</a>
+                        <a href="" class="filter__link">Jackets & Coats</a>
+                        <a href="" class="filter__link">Polos</a>
+                        <a href="" class="filter__link">Shirts</a>
+                        <a href="" class="filter__link">Shoes</a>
+                        <a href="" class="filter__link">Sweaters & Knits</a>
+                        <a href="" class="filter__link">T-Shirts</a>
+                        <a href="" class="filter__link">Tanks</a></div>
+
+                </details>
+                <details class="filter__item">
+                    <summary class="filter__head">BRAND</summary>
+                    <div class="filter__link-box">
+                        <a href="" class="filter__link">Accessories</a>
+                        <a href="" class="filter__link">Bags</a>
+                        <a href="" class="filter__link">Denim</a>
+                        <a href="" class="filter__link">Hoodies & Sweatshirts</a>
+                        <a href="" class="filter__link">Jackets & Coats</a>
+                        <a href="" class="filter__link">Polos</a>
+                        <a href="" class="filter__link">Shirts</a>
+                        <a href="" class="filter__link">Shoes</a>
+                        <a href="" class="filter__link">Sweaters & Knits</a>
+                        <a href="" class="filter__link">T-Shirts</a>
+                        <a href="" class="filter__link">Tanks</a></div>
+
+                </details>
+                <details class="filter__item">
+                    <summary class="filter__head">DESIGNER</summary>
+                    <div class="filter__link-box">
+                        <a href="" class="filter__link">Accessories</a>
+                        <a href="" class="filter__link">Bags</a>
+                        <a href="" class="filter__link">Denim</a>
+                        <a href="" class="filter__link">Hoodies & Sweatshirts</a>
+                        <a href="" class="filter__link">Jackets & Coats</a>
+                        <a href="" class="filter__link">Polos</a>
+                        <a href="" class="filter__link">Shirts</a>
+                        <a href="" class="filter__link">Shoes</a>
+                        <a href="" class="filter__link">Sweaters & Knits</a>
+                        <a href="" class="filter__link">T-Shirts</a>
+                        <a href="" class="filter__link">Tanks</a></div>
+
+                </details>
+            </div>
+        </details>
+        <div class="sort">
+            <details class="sort__details">
+                <summary class="sort__summary"><span class="sort__heading">TRENDING NOW</span>
+                    <svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" fill="#6F6E6E"/>
+                        </svg>
+                </summary>
+            </details>
+            <details class="sort__details">
+                <summary class="sort__summary"><span class="sort__heading">SIZE</span>
+                    <svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" fill="#6F6E6E"/>
+                        </svg>
+                </summary>
+                <div class="sort__box">
+                    <div class="sort__check">
+                        <input id="sort__check1" type="checkbox"><label for="#">XS</label> </div>
+                    <div class="sort__check">
+                        <input id="sort__check2" type="checkbox"><label for="#">S</label> </div>
+                    <div class="sort__check">
+                        <input id="sort__check3" type="checkbox"><label for="#">M</label> </div>
+                    <div class="sort__check">
+                        <input id="sort__check4" type="checkbox"><label for="#">L</label> </div>
+                </div>
+
+            </details>
+            <details class="sort__details">
+                <summary class="sort__summary"><span class="sort__heading">PRICE</span>
+                    <svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.00214 5.00214C4.83521 5.00247 4.67343 4.94433 4.54488 4.83782L0.258102 1.2655C0.112196 1.14422 0.0204417 0.969958 0.00302325 0.781035C-0.0143952 0.592112 0.0439493 0.404007 0.165221 0.258101C0.286493 0.112196 0.460759 0.0204417 0.649682 0.00302327C0.838605 -0.0143952 1.02671 0.043949 1.17262 0.165221L5.00214 3.36602L8.83167 0.279536C8.90475 0.220188 8.98884 0.175869 9.0791 0.149125C9.16937 0.122382 9.26403 0.113741 9.35764 0.1237C9.45126 0.133659 9.54198 0.162021 9.6246 0.207156C9.70722 0.252292 9.7801 0.313311 9.83906 0.386705C9.90449 0.460167 9.95405 0.546351 9.98462 0.639855C10.0152 0.733359 10.0261 0.83217 10.0167 0.930097C10.0073 1.02802 9.97784 1.12296 9.93005 1.20895C9.88227 1.29494 9.81723 1.37013 9.73904 1.42982L5.45225 4.88068C5.32002 4.97036 5.16154 5.01312 5.00214 5.00214Z" fill="#6F6E6E"/>
+                </svg>
+                </summary>
+            </details>
+        </div>
+
+    </div>
     <div class="product-box center">
         <div class="product">
             <img class="product__img" src="img/product1.jpg" alt="product">
@@ -42,6 +150,23 @@
                 <p class="product__price">$52.00</p>
             </div>
         </div>
+        <div class="product">
+            <img class="product__img" src="img/product1.jpg" alt="product">
+            <div class="product__content">
+                <a href="#" class="product__name">ELLERY X M'O CAPSULE</a>
+                <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                <p class="product__price">$52.00</p>
+            </div>
+        </div>
+        <div class="product">
+            <img class="product__img" src="img/product1.jpg" alt="product">
+            <div class="product__content">
+                <a href="#" class="product__name">ELLERY X M'O CAPSULE</a>
+                <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                <p class="product__price">$52.00</p>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 
